Ass-1/getting_started/test_files/syntax_errors/MissingMethodBraces.cpm
class MissingMethodBraces {

  Init(): int
    number := 4        // @error - syntax (missing opening and closing braces for method body)
    print(number)

}

main() : int {
  print(MissingMethodBraces().Init())
  return 0
}